fix contrast error

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #eee2cc;
+    color: #ffffff;
     font-weight: 500;
 }
 
